Positions the y-axis title to the right to prevent overlap of y-axis ticks

--- a/cdap-ui/app/cdap/components/PipelineSummary/LogsMetricsGraph/LogsMetricsGraph.scss
+++ b/cdap-ui/app/cdap/components/PipelineSummary/LogsMetricsGraph/LogsMetricsGraph.scss
@@ -55,7 +55,7 @@ $container_border_color: lightgray;
   }
   .y-axis-title {
     position: absolute;
-    left: -95px;
+    right: -100px;
     transform: rotate(-90deg);
     top: 40%;
   }
